Refactored project so it can load different style sheets.